// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css prop react basic 1`] = `
.glamor-0 {
  color: red;
  font-size: 1px;
}

<p
  className="glamor-0 tree"
>
  hello world
</p>
`;

exports[`css prop react css correctly adds the id 1`] = `
.glamor-0 {
  display: block;
}

<div
  className="glamor-0 SFC"
>
  Hello
</div>
`;

exports[`css prop react css correctly adds the id 2`] = `
.glamor-0 {
  display: block;
}

<div
  className="glamor-0 ClsComp"
>
  Hello
</div>
`;

exports[`css prop react css correctly adds the id 3`] = `
.glamor-0 {
  display: block;
}

<div
  className="glamor-0 hoc"
>
  <div
    className="glamor-0 ClsComp"
  >
    Hello
  </div>
</div>
`;

exports[`css prop react kitchen sink 1`] = `
.glamor-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-0 {
  font-size: 6;
  color: red;
}

.glamor-1 {
  color: blue;
}

.glamor-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.glamor-3 {
  color: red;
  border-radius: 5;
}

.glamor-3:hover {
  font-weight: bold;
  color: gray;
}

<div
  className="glamor-4 tree css__legacy-stuff"
>
  <h1
    className="glamor-0 tree"
  >
    BOOM
  </h1>
  <p
    className="glamor-1 tree test_class1"
  >
    Hello
  </p>
  <p
    className="glamor-2 tree test_class1 test___class45"
  >
    World
  </p>
  <p
    className="glamor-3 tree"
  >
    hello world
  </p>
</div>
`;

exports[`css prop react merging regular classes 1`] = `
.glamor-0 {
  display: block;
}

<div
  className="glamor-0 tree some-class"
/>
`;

exports[`css prop react objects 1`] = `
.glamor-0 {
  color: red;
  font-size: 1px;
}

<p
  className="glamor-0"
>
  hello world
</p>
`;

exports[`css prop react specificity with composition 1`] = `
.glamor-0 {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="tree flex glamor-0"
/>
`;

exports[`css prop react string expression 1`] = `
.glamor-0 {
  color: red;
  background: blue;
  font-size: 48px;
}

<p
  className="glamor-0 tree"
>
  hello world
</p>
`;
